--- a/pipeline.yml
+++ b/pipeline.yml
@@ -1,4 +1,4 @@
-name: Java CI
+name: Java pipeline
 
 on:
   push:
@@ -23,3 +23,4 @@ jobs:
 
     - name: Build with Maven
       run: mvn clean install
+# test line
